# Cameo

./: .clang-format  .clang-tidy  CMakeLists.txt  README.md  run.sh
cmake/: CompileOptions.cmake
src/include/: CMakeLists.txt
src/include/Cameo/: CMakeLists.txt
src/include/Cameo/Cameo/: Cameo.cpp  Cameo.hpp
src/include/managers/: CMakeLists.txt
src/include/managers/managers/: managers.cpp  managers.hpp
src/src/: CMakeLists.txt
src/src/src/: main.cpp
test/: CMakeLists.txt  test.cpp  test_managers.cpp
